@@ -141,18 +141,27 @@ function TimerBar:UpdateValue(force)
 	local percent = value / self.Max
 
 	if force or value ~= self.__value then
-		self.bar:SetValue(value)
+		local bar = self.bar
+		bar:SetValue(value)
 
 		if abs(self.__oldPercent - percent) > 0.02 then
 			-- If the percentage of the bar changed by more than 2%, force an instant redraw of the texture.
 			-- For some reason, blizzard defers the updating of status bar textures until sometimes 1 or 2 frames after it is set.
 			self:UpdateStatusBarImmediate(value)
+		elseif bar:GetReverseFill() then
+			-- Bliizard goofed (or forgot) when they implemented reverse filling,
+			-- the tex coords are messed up. We'll just have to fix them ourselves.
+			if bar:GetOrientation() == "VERTICAL" then
+				self.texture:SetTexCoord(0, 0, percent, 0, 0, 1, percent, 1)
+			else
+				self.texture:SetTexCoord(1 - percent, 1, 0, 1)
+			end
 		end
 
 		-- This line is here to fix an issue with the bar texture
 		-- not being in the correct location/correct size if
 		-- the bar is modified while it, or a parent, is hidden.
-		self.texture:GetSize()
+		--self.texture:GetSize()
 
 		if value ~= 0 then
 			local completeColor = self.completeColor
@@ -179,7 +188,7 @@ function TimerBar:UpdateValue(force)
 
 			local inv = 1-doublePercent
 
-			self.bar:SetStatusBarColor(
+			bar:SetStatusBarColor(
 				(startColor.r * doublePercent) + (completeColor.r * inv),
 				(startColor.g * doublePercent) + (completeColor.g * inv),
 				(startColor.b * doublePercent) + (completeColor.b * inv),
@@ -195,23 +204,41 @@ end
 
 function TimerBar:UpdateStatusBarImmediate(value)
 	local bar = self.bar
-	--print("immediate status bar", bar:GetName(), value)
-	local tex = bar:GetStatusBarTexture()
+	local tex = self.texture
 	local percent = value / self.Max
 	if percent < 0 then percent = 0 elseif percent > 1 then percent = 1 end
+
 
 	if bar:GetOrientation() == "VERTICAL" then
 		local height = bar:GetHeight()
 		local sizePercent = height*percent
-		tex:SetPoint("TOPLEFT", 0, sizePercent - height)
-		tex:SetPoint("TOPRIGHT", 0, sizePercent - height)
-		tex:SetTexCoord(percent, 0, 0, 0, percent, 1, 0, 1)
+
+
+		-- tex:SetTexCoord(ULx, ULy, LLx, LLy, URx, URy, LRx, LRy)
+		if bar:GetReverseFill() then
+			tex:SetPoint("BOTTOMLEFT", 0, height - sizePercent)
+			tex:SetPoint("BOTTOMRIGHT", 0, height - sizePercent)
+			tex:SetTexCoord(0, 0, percent, 0, 0, 1, percent, 1)
+		else
+			tex:SetPoint("TOPLEFT", 0, sizePercent - height)
+			tex:SetPoint("TOPRIGHT", 0, sizePercent - height)
+			tex:SetTexCoord(percent, 0, 0, 0, percent, 1, 0, 1)
+		end
+
 	else
 		local width = bar:GetWidth()
 		local sizePercent = width*percent
-		tex:SetPoint("TOPRIGHT", sizePercent - width, 0)
-		tex:SetPoint("BOTTOMRIGHT", sizePercent - width, 0)
-		tex:SetTexCoord(0, percent, 0, 1)
+
+		if bar:GetReverseFill() then
+			tex:SetPoint("TOPLEFT", width - sizePercent, 0)
+			tex:SetPoint("BOTTOMLEFT", width - sizePercent, 0)
+			tex:SetTexCoord(1 - percent, 1, 0, 1)
+		else
+			tex:SetPoint("TOPRIGHT", sizePercent - width, 0)
+			tex:SetPoint("BOTTOMRIGHT", sizePercent - width, 0)
+			tex:SetTexCoord(0, percent, 0, 1)
+		end
+
 	end
 end
 
