@@ -19,7 +19,6 @@
 					</OnLoad>
 				</Scripts>
 			</CheckButton>
-			
 			<EditBox parentKey="FakeMax" inherits="TellMeWhen_TimeEditBoxTemplate" autoFocus="false">
 				<Size x="45" y="15"/>
 				<Scripts>
@@ -42,8 +41,8 @@
 					</OnLoad>
 				</Scripts>
 			</EditBox>
-			
-			<CheckButton parentKey="EnableColors" inherits="TellMeWhen_CheckTemplate">
+
+			<CheckButton parentKey="Reverse" inherits="TellMeWhen_CheckTemplate">
 				<Anchors>
 					<!-- Left anchor is handled by DistributeFrameAnchorsLaterally in parent's OnLoad -->
 					<Anchor point="TOP" relativeKey="$parent.Invert" relativePoint="BOTTOM" y="3"/>
@@ -52,8 +51,8 @@
 					<OnLoad>
 						TMW:CInit(self)
 
-						self:SetTexts(TMW.L["COLOR_OVERRIDE_GROUP"], TMW.L["COLOR_OVERRIDE_GROUP_DESC"])
-						self:SetSetting("TimerBar_EnableColors")
+						self:SetTexts(TMW.L["ICONMENU_REVERSEBARS"], TMW.L["ICONMENU_REVERSEBARS_DESC"])
+						self:SetSetting("BarDisplay_Reverse")
 					</OnLoad>
 				</Scripts>
 			</CheckButton>
@@ -74,9 +73,24 @@
 				</Scripts>
 			</CheckButton>
 			
+			
+			<CheckButton parentKey="EnableColors" inherits="TellMeWhen_CheckTemplate">
+				<Anchors>
+					<!-- Left anchor is handled by DistributeFrameAnchorsLaterally in parent's OnLoad -->
+					<Anchor point="TOP" relativeKey="$parent.Reverse" relativePoint="BOTTOM" y="3"/>
+				</Anchors>
+				<Scripts>
+					<OnLoad>
+						TMW:CInit(self)
+
+						self:SetTexts(TMW.L["COLOR_OVERRIDE_GROUP"], TMW.L["COLOR_OVERRIDE_GROUP_DESC"])
+						self:SetSetting("TimerBar_EnableColors")
+					</OnLoad>
+				</Scripts>
+			</CheckButton>
+			
 			<CheckButton parentKey="ClassColor" inherits="TellMeWhen_CheckTemplate">
 				<Anchors>
-					<Anchor point="TOP" relativeKey="$parent.EnableColors" relativePoint="BOTTOM" y="3"/>
 				</Anchors>
 				<Scripts>
 					<OnLoad>
@@ -112,7 +126,7 @@
 
 							self:GetParent():AdjustHeight()
 						end)
-					</OnLoad>
+					</OnLoad> 
 				</Scripts>
 			</Frame>
 
@@ -124,13 +138,17 @@
 				self:SetTitle(TMW.L["CONFIGPANEL_TIMERBAR_BARDISPLAY_HEADER"])
 				
 				self.Invert:ConstrainLabel(self.FakeMax)
+				self.FakeMax:ConstrainLabel(self, "RIGHT")
+
+				self.Reverse:ConstrainLabel(self.BarGCD)
 				self.BarGCD:ConstrainLabel(self, "RIGHT")
 
-				self.EnableColors:ConstrainLabel(self.BarGCD)
-				self.FakeMax:ConstrainLabel(self, "RIGHT")
-				
+				self.EnableColors:ConstrainLabel(self.ClassColor)
+				self.ClassColor:ConstrainLabel(self, "RIGHT")
+
 				TMW.IE:DistributeFrameAnchorsLaterally(self, 2, self.Invert, self.FakeMax)
-				TMW.IE:DistributeFrameAnchorsLaterally(self, 2, self.EnableColors, self.BarGCD)
+				TMW.IE:DistributeFrameAnchorsLaterally(self, 2, self.Reverse, self.BarGCD)
+				TMW.IE:DistributeFrameAnchorsLaterally(self, 2, self.EnableColors, self.ClassColor)
 			</OnLoad>
 		</Scripts>
 	</Frame>
